Blender segfault on render with workbench render engine via command line. #57342

Closed
opened 2018-10-22 14:27:31 +02:00 by Michael Soluyanov · 7 comments

System Information
Ubuntu 18.04

Grapics card and driver
GeForce GTX 1070/PCIe/SSE2
NVIDIA 390.48

Blender Version
Broken:
Blender 2.80 (sub 37), Commit date: 2018-12-12 00:16, Hash b87b6e8e28

Short description of error

Blender segfault on render with Workbench render engine via command line. Eevee and cycles work fine.

Exact steps for others to reproduce the error

  1. Create any file with Workbench render engine. Or use the file: (this file contains default blender scene with Workbench render engine selected)
    testwbrender.blend
  2. Try to render via command line:
cd /blender 2.8 folder
 ./blender -b ~/Downloads folder/testopenGLrenderer.blend -x 1 -o //test/ -f 1

Crash reports

28 render stls.crash.txt

Console log:

Read prefs: /home/design/.config/blender/2.80/config/userpref.blend
found bundled python: /home/design/Загрузки/blender-2.80-b87b6e8e289-linux-glibc224-x86_64/2.80/python
Read blend: /home/design/testwbrender.blend
Writing: /tmp/testwbrender.crash.txt
Segmentation fault

**System Information** Ubuntu 18.04 **Grapics card and driver** GeForce GTX 1070/PCIe/SSE2 NVIDIA 390.48 **Blender Version** Broken: Blender 2.80 (sub 37), Commit date: 2018-12-12 00:16, Hash b87b6e8e289 **Short description of error** Blender segfault on render with Workbench render engine via command line. Eevee and cycles work fine. **Exact steps for others to reproduce the error** 1. Create any file with Workbench render engine. Or use the file: (this file contains default blender scene with Workbench render engine selected) [testwbrender.blend](https://archive.blender.org/developer/F5980181/testwbrender.blend) 2. Try to render via command line: ``` cd /blender 2.8 folder ./blender -b ~/Downloads folder/testopenGLrenderer.blend -x 1 -o //test/ -f 1 ``` **Crash reports** [28 render stls.crash.txt](https://archive.blender.org/developer/F5182646/28_render_stls.crash.txt) Console log: ``` Read prefs: /home/design/.config/blender/2.80/config/userpref.blend found bundled python: /home/design/Загрузки/blender-2.80-b87b6e8e289-linux-glibc224-x86_64/2.80/python Read blend: /home/design/testwbrender.blend Writing: /tmp/testwbrender.crash.txt Segmentation fault ```
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

Added subscriber: @StephenSwaney

Added subscriber: @StephenSwaney

Please attach a .blend, and mention your graphics card and driver.

  - MISSING INFO

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

A guideline for making a good bug report can be found here: https://wiki.blender.org/wiki/Process/Bug_Reports

Marking as "Incomplete" until the requested information/data is provided.

Please attach a .blend, and mention your graphics card and driver. - MISSING INFO Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc. A guideline for making a good bug report can be found here: https://wiki.blender.org/wiki/Process/Bug_Reports Marking as "Incomplete" until the requested information/data is provided.
Michael Soluyanov changed title from Blender segfault on render openGL via command line. to Blender segfault on render with openGL render engine via command line. 2018-10-30 10:26:33 +01:00
Michael Soluyanov changed title from Blender segfault on render with openGL render engine via command line. to Blender segfault on render with workbench render engine via command line. 2018-12-17 13:33:04 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-02-05 21:20:01 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555557cfcecd in studiolight_update_world (wpd=0x7fffeb034008, studiolight=0x0, wd=0x7fffeb0343e8)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_studiolight.c:54
54			if (sl->flag) {
(gdb) bt
#0  0x0000555557cfcecd in studiolight_update_world (wpd=0x7fffeb034008, studiolight=0x0, wd=0x7fffeb0343e8)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_studiolight.c:54
#1  0x0000555557d38677 in workbench_private_data_init (wpd=0x7fffeb034008)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_data.c:110
#2  0x0000555557cf2a78 in workbench_deferred_engine_init (vedata=0x7fffdef29388)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_deferred.c:428
#3  0x0000555557cfc431 in workbench_render (data=0x7fffdef29388, engine=0x7fffea586108, render_layer=0x7fffdacd2208, rect=0x7fffffffbfb0)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_render.c:141
#4  0x0000555557cf18fd in workbench_render_to_image (vedata=0x7fffdef29388, engine=0x7fffea586108, render_layer=0x7fffdacd2208, rect=0x7fffffffbfb0)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/solid_mode.c:93
#5  0x0000555557ca236b in DRW_render_to_image (engine=0x7fffea586108, depsgraph=0x7fffdf00f108)
    at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1884
#6  0x00005555577568ff in RE_engine_render (re=0x7fffe5ff3008, do_all=0)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/external_engine.c:735
#7  0x000055555775e840 in do_render_3d (re=0x7fffe5ff3008)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1080
- 8  0x000055555775eb54 in do_render (re=0x7fffe5ff3008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1156
- 9  0x000055555775f300 in do_render_composite (re=0x7fffe5ff3008)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1362
#10 0x0000555557760069 in do_render_all_options (re=0x7fffe5ff3008)
    at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1629
#11 0x0000555557762ef8 in RE_BlenderAnim (re=0x7fffe5ff3008, bmain=0x7fffeabf6908, scene=0x7fffdef4c008, single_layer=0x0, camera_override=0x0, sfra=1,
    efra=1, tfra=1) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:2481
#12 0x000055555705a66a in arg_handle_render_frame (argc=2, argv=0x7fffffffdcf0, data=0x7fffeb058108)
    at /home/zed/programmering/blender_master/blender/source/creator/creator_args.c:1447
#13 0x00005555583b27de in BLI_argsParse (ba=0x7fffea6800c8, pass=4, default_cb=0x55555705b50a <arg_handle_load_file>, default_data=0x7fffeb058108)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_args.c:274
#14 0x000055555705c7f9 in main_args_setup_post (C=0x7fffeb058108, ba=0x7fffea6800c8)
    at /home/zed/programmering/blender_master/blender/source/creator/creator_args.c:2015
#15 0x00005555570580a2 in main (argc=7, argv=0x7fffffffdcc8) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:470
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555557cfcecd in studiolight_update_world (wpd=0x7fffeb034008, studiolight=0x0, wd=0x7fffeb0343e8) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_studiolight.c:54 54 if (sl->flag) { (gdb) bt #0 0x0000555557cfcecd in studiolight_update_world (wpd=0x7fffeb034008, studiolight=0x0, wd=0x7fffeb0343e8) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_studiolight.c:54 #1 0x0000555557d38677 in workbench_private_data_init (wpd=0x7fffeb034008) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_data.c:110 #2 0x0000555557cf2a78 in workbench_deferred_engine_init (vedata=0x7fffdef29388) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_deferred.c:428 #3 0x0000555557cfc431 in workbench_render (data=0x7fffdef29388, engine=0x7fffea586108, render_layer=0x7fffdacd2208, rect=0x7fffffffbfb0) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/workbench_render.c:141 #4 0x0000555557cf18fd in workbench_render_to_image (vedata=0x7fffdef29388, engine=0x7fffea586108, render_layer=0x7fffdacd2208, rect=0x7fffffffbfb0) at /home/zed/programmering/blender_master/blender/source/blender/draw/engines/workbench/solid_mode.c:93 #5 0x0000555557ca236b in DRW_render_to_image (engine=0x7fffea586108, depsgraph=0x7fffdf00f108) at /home/zed/programmering/blender_master/blender/source/blender/draw/intern/draw_manager.c:1884 #6 0x00005555577568ff in RE_engine_render (re=0x7fffe5ff3008, do_all=0) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/external_engine.c:735 #7 0x000055555775e840 in do_render_3d (re=0x7fffe5ff3008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1080 - 8 0x000055555775eb54 in do_render (re=0x7fffe5ff3008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1156 - 9 0x000055555775f300 in do_render_composite (re=0x7fffe5ff3008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1362 #10 0x0000555557760069 in do_render_all_options (re=0x7fffe5ff3008) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:1629 #11 0x0000555557762ef8 in RE_BlenderAnim (re=0x7fffe5ff3008, bmain=0x7fffeabf6908, scene=0x7fffdef4c008, single_layer=0x0, camera_override=0x0, sfra=1, efra=1, tfra=1) at /home/zed/programmering/blender_master/blender/source/blender/render/intern/source/pipeline.c:2481 #12 0x000055555705a66a in arg_handle_render_frame (argc=2, argv=0x7fffffffdcf0, data=0x7fffeb058108) at /home/zed/programmering/blender_master/blender/source/creator/creator_args.c:1447 #13 0x00005555583b27de in BLI_argsParse (ba=0x7fffea6800c8, pass=4, default_cb=0x55555705b50a <arg_handle_load_file>, default_data=0x7fffeb058108) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/BLI_args.c:274 #14 0x000055555705c7f9 in main_args_setup_post (C=0x7fffeb058108, ba=0x7fffea6800c8) at /home/zed/programmering/blender_master/blender/source/creator/creator_args.c:2015 #15 0x00005555570580a2 in main (argc=7, argv=0x7fffffffdcc8) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:470 ```

This issue was referenced by fea5e1dc3a

This issue was referenced by fea5e1dc3a235303789e2a7bac2005c0667f1963

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57342
No description provided.