Fix T57342: Crash on render with workbench render engine via command line